@@ -18,6 +18,7 @@ RuXu W <wrxzzj@gmail.com>
 Matthew Moore
 Colin Caughie <c.caughie@indigovision.com>
 David Carvalho <andaris@gmail.com>
+David Reiss <dreiss@facebook.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
